--- a/test.css
+++ b/test.css
@@ -3,6 +3,38 @@ body{
   height: 100%;
 
 }
+ul {
+  border: 1px solid #555;
+  width: 110px;
+  margin: 0;
+  padding: 0;
+  background-color: black;
+  font-weight: bold;
+  position: absolute;
+  left: 46%;
+  top: 4.4%;
+
+}
+
+li {
+
+  display: block;
+  float: left;
+}
+
+li a {
+  display: block;
+  color: green;
+  text-align: center;
+  padding: 4px 6px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #00ff00;
+  color: black;
+}
+
 .matrix{
   /*color: rgb(26, 255, 26);*/
   color: purple;
