--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ p:nth-child(7) {
 @media only screen and (min-width:769px) and (max-width:959px) {
     .responsive {
         width: 700px;
+        height: 2500px;
     }
 }
 
